// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App can render goody: Java Pair 1`] = `
"package pair;

record Pair<TFirst, TSecond>(TFirst first, TSecond second) {}"
`;

exports[`App can render goody: Java SimpleIterator 1`] = `
"package simple_iterator;

import java.util.Iterator;
import java.util.NoSuchElementException;

interface SimpleIterator<T> {
  public T next();

  static enum HasNextState {
    TRUE,
    FALSE,
    UNKNOWN,
  }

  public static <T> Iterator<T> toIterator(final SimpleIterator<T> iterator) {
    final HasNextState[] hasNextState = { HasNextState.UNKNOWN };
    final Object[] elementReserve = { null };

    return new Iterator<T>() {
      public boolean hasNext() {
        if (hasNextState[0] == HasNextState.UNKNOWN) {
          try {
            elementReserve[0] = iterator.next();
            hasNextState[0] = HasNextState.TRUE;
          } catch (NoSuchElementException e) {
            hasNextState[0] = HasNextState.FALSE;
          }
        }

        return hasNextState[0] == HasNextState.TRUE;
      }

      public T next() {
        if (hasNextState[0] == HasNextState.TRUE) {
          hasNextState[0] = HasNextState.UNKNOWN;

          @SuppressWarnings("unchecked")
          T element = (T) elementReserve[0];

          elementReserve[0] = null;
          return element;
        }

        if (hasNextState[0] == HasNextState.UNKNOWN) {
          return iterator.next();
        }

        throw new NoSuchElementException();
      }
    };
  }
}"
`;

exports[`App can render goody: Java UnionFind 1`] = `
"package union_find;

class UnionFind {
  private final int[] parent;
  private final int[] componentSize;
  private int components;

  public UnionFind(int n) {
    parent = new int[n];
    componentSize = new int[n];
    components = n;
    for (int i = 0; i < n; ++i) {
      parent[i] = i;
      componentSize[i] = 1;
    }
  }

  public boolean union(int a, int b) {
    int pa = find(a);
    int pb = find(b);

    if (pa == pb) {
      return false;
    }

    if (componentSize[pa] > componentSize[pb]) {
      componentSize[pa] += componentSize[pb];
      parent[pb] = parent[pa];
    } else {
      componentSize[pb] += componentSize[pa];
      parent[pa] = parent[pb];
    }
    --components;

    return true;
  }

  public int find(int a) {
    if (parent[a] == a) {
      return a;
    }

    return parent[a] = find(parent[a]);
  }

  public boolean areConnected(int a, int b) {
    return find(a) == find(b);
  }

  public int components() {
    return components;
  }
}"
`;

exports[`App can render goody: Java gcd(int,int) 1`] = `
"package gcd_int_int;

final class AP {
  private AP() {}

  public static int gcd(int a, int b) {
    if (a < 0 || b < 0) {
      throw new IllegalArgumentException(
        "Can only find the GCD of non-negative integers!"
      );
    }

    while (b != 0) {
      int tmp = b;
      b = a % b;
      a = tmp;
    }

    return a;
  }
}"
`;

exports[`App can render goody: Java lcm(int,int) 1`] = `
"package lcm_int_int;

import static gcd_int_int.AP.*;

final class AP {
  private AP() {}

  public static int lcm(int a, int b) {
    return (a / gcd(a, b)) * b;
  }
}"
`;

exports[`App can render goody: Java toIterable 1`] = `
"package to_iterable;

import java.util.Iterator;

final class AP {
  private AP() {}

  public static <T> Iterable<T> toIterable(final Iterator<T> iterator) {
    return () -> iterator;
  }
}"
`;

exports[`App can render goody: Java traverseInorder 1`] = `
"package traverse_inorder;

import static to_iterable.AP.*;

import pair.Pair;
import simple_iterator.SimpleIterator;

import java.util.Iterator;
import java.util.NoSuchElementException;
import java.util.Stack;

final class AP {
  private AP() {}

  public static Iterable<TreeNode> traverseInorder(final TreeNode root) {
    final var stack = new Stack<Pair<TreeNode, Boolean>>();
    stack.push(new Pair<>(root, false));

    return toIterable(
      SimpleIterator.toIterator(() -> {
        while (!stack.isEmpty()) {
          var nodeAndDidTraverseLeftChild = stack.pop();

          var node = nodeAndDidTraverseLeftChild.first();
          if (node == null) {
            continue;
          }

          if (nodeAndDidTraverseLeftChild.second()) {
            return node;
          }

          stack.push(new Pair<>(node.right, false));
          stack.push(new Pair<>(node, true));
          stack.push(new Pair<>(node.left, false));
        }

        throw new NoSuchElementException();
      })
    );
  }
}

class TreeNode {
  // TODO: support comments outside a class in code extraction

  // TODO: don't include this class in the goody, since it's automatically defined by LeetCode

  // TODO: get coreImports to be first in generated output

  // TODO: alphabetize classes when merging Java code

  TreeNode left, right;
}"
`;

exports[`App can render goody: JavaScript Array.prototype.slidingWindows 1`] = `
"import "ArraySlice";

Array.prototype.slidingWindows = function* (windowSize) {
  for (
    let win = ArraySlice.get(this, 0, windowSize - 1);
    win != null;
    win = win.isSuffix() ? null : win.slide()
  ) {
    yield win;
  }
};"
`;

exports[`App can render goody: JavaScript Array.prototype.swap 1`] = `
"Array.prototype.swap = function (i, j) {
  const tmp = this[i];
  this[i] = this[j];
  this[j] = tmp;
};"
`;

exports[`App can render goody: JavaScript ArraySlice 1`] = `
"export class ArraySlice {
  constructor(array, start, end) {
    this.array = array;
    this.start = start;
    this.end = end;
  }

  get length() {
    return this.end - this.start + 1;
  }

  at(index) {
    const adjustedIndex = index < 0 ? index + this.length : index;
    return this.array[this.start + adjustedIndex];
  }

  *[Symbol.iterator]() {
    for (let i = this.start; i <= this.end; ++i) {
      yield this.array[i];
    }
  }

  slide(delta = 1) {
    return ArraySlice.get(this.array, this.start + delta, this.end + delta);
  }

  isPrefix() {
    return this.start === 0;
  }

  isSuffix() {
    return this.end === this.array.length - 1;
  }

  static get(array, start, end) {
    ArraySlice.proxyHandler ??= {
      get(target, property, receiver) {
        if (typeof property === "string" || typeof property === "number") {
          const index = parseInt(String(property), 10);
          if (String(index) === String(property)) {
            if (index < 0 || index >= receiver.length) {
              return undefined;
            }
            return receiver.at(index);
          }
        }

        return target[property];
      },
    };

    return new Proxy(
      new ArraySlice(array, start, end),
      ArraySlice.proxyHandler,
    );
  }
}"
`;

exports[`App can render goody: JavaScript BinaryHeap 1`] = `
"import "Array.prototype.swap";

export class BinaryHeap {
  items = [];

  constructor(compareFn) {
    this.compareFn = compareFn;
  }

  push(item) {
    this.items.push(item);
    this.bubbleUp(this.items.length - 1);
  }

  peek() {
    return this.items[0];
  }

  pop() {
    if (this.isEmpty()) {
      return undefined;
    }

    this.items.swap(0, this.items.length - 1);
    const res = this.items.pop();
    this.bubbleDown(0);
    return res;
  }

  get size() {
    return this.items.length;
  }

  isEmpty() {
    return this.size === 0;
  }

  static getParentIndex(index) {
    return Math.floor((index - 1) / 2);
  }

  static getChildIndexes(index) {
    // TODO: investigate whether listing the right child first can offer a
    // performance boost in bubbleDown(), due to favoring the side of the
    // tree that may be smaller
    return [2 * index + 1, 2 * index + 2];
  }

  bubbleUp(index) {
    if (index === 0) {
      return;
    }

    const parentIndex = BinaryHeap.getParentIndex(index);
    if (this.compareFn(this.items[index], this.items[parentIndex]) < 0) {
      this.items.swap(index, parentIndex);
      this.bubbleUp(parentIndex);
    }
  }

  bubbleDown(index) {
    let bestIndex = index;
    for (const childIndex of BinaryHeap.getChildIndexes(index)) {
      if (
        childIndex < this.items.length &&
        this.compareFn(this.items[childIndex], this.items[bestIndex]) < 0
      ) {
        bestIndex = childIndex;
      }
    }

    if (bestIndex !== index) {
      this.items.swap(index, bestIndex);
      this.bubbleDown(bestIndex);
    }
  }
}"
`;

exports[`App can render goody: JavaScript Function.returnThis 1`] = `
"Function.returnThis = function () {
  return this;
};"
`;

exports[`App can render goody: JavaScript Iterator.prototype 1`] = `
"export const iteratorPrototype = Object.getPrototypeOf(
  Object.getPrototypeOf([].values()),
);"
`;

exports[`App can render goody: JavaScript Iterator.prototype.every 1`] = `
"import "Iterator.prototype";
import "Iterator.prototype.toIterable";

iteratorPrototype.every ??= function (callbackfn) {
  let index = 0;
  for (const element of this.toIterable()) {
    if (!callbackfn(element, index)) {
      return false;
    }
    ++index;
  }
  return true;
};"
`;

exports[`App can render goody: JavaScript Iterator.prototype.filter 1`] = `
"import "Iterator.prototype";
import "Iterator.prototype.toIterable";

iteratorPrototype.filter ??= function* (callbackFn) {
  let index = 0;
  for (const element of this.toIterable()) {
    if (callbackFn(element, index)) {
      yield element;
    }
    ++index;
  }
};"
`;

exports[`App can render goody: JavaScript Iterator.prototype.find 1`] = `
"import "Iterator.prototype";
import "Iterator.prototype.toIterable";

iteratorPrototype.find ??= function (callbackFn) {
  let index = 0;
  for (const element of this.toIterable()) {
    if (callbackFn(element, index)) {
      return element;
    }
    ++index;
  }
  return undefined;
};"
`;

exports[`App can render goody: JavaScript Iterator.prototype.forEach 1`] = `
"import "Iterator.prototype";
import "Iterator.prototype.toIterable";

iteratorPrototype.forEach ??= function (callbackFn) {
  let index = 0;
  for (const element of this.toIterable()) {
    callbackFn(element, index);
    ++index;
  }
};"
`;

exports[`App can render goody: JavaScript Iterator.prototype.map 1`] = `
"import "Iterator.prototype";
import "Iterator.prototype.toIterable";

iteratorPrototype.map ??= function* (callbackFn) {
  let index = 0;
  for (const element of this.toIterable()) {
    yield callbackFn(element, index);
    ++index;
  }
};"
`;

exports[`App can render goody: JavaScript Iterator.prototype.max 1`] = `
"import "compareNatural";
import "Iterator.prototype";
import "Iterator.prototype.toIterable";

iteratorPrototype.max = function (
  compareFn = compareNatural,
  { nanBehavior = "avoid" } = {},
) {
  let res = undefined;

  let isFirst = true;
  for (const element of this.toIterable()) {
    if (
      isFirst ||
      compareFn(element, res) > 0 ||
      (nanBehavior === "avoid" && Number.isNaN(res) && !Number.isNaN(element))
    ) {
      res = element;
      isFirst = false;
    }
  }

  return res;
};"
`;

exports[`App can render goody: JavaScript Iterator.prototype.min 1`] = `
"import "compareNatural";
import "Iterator.prototype";
import "Iterator.prototype.toIterable";

iteratorPrototype.min = function (
  compareFn = compareNatural,
  { nanBehavior = "avoid" } = {},
) {
  let res = undefined;

  let isFirst = true;
  for (const element of this.toIterable()) {
    if (
      isFirst ||
      compareFn(element, res) < 0 ||
      (nanBehavior === "avoid" && Number.isNaN(res) && !Number.isNaN(element))
    ) {
      res = element;
      isFirst = false;
    }
  }

  return res;
};"
`;

exports[`App can render goody: JavaScript Iterator.prototype.some 1`] = `
"import "Iterator.prototype";
import "Iterator.prototype.toIterable";

iteratorPrototype.some ??= function (callbackfn) {
  let index = 0;
  for (const element of this.toIterable()) {
    if (callbackfn(element, index)) {
      return true;
    }
    ++index;
  }
  return false;
};"
`;

exports[`App can render goody: JavaScript Iterator.prototype.toArray 1`] = `
"import "Iterator.prototype";
import "Iterator.prototype.toIterable";

iteratorPrototype.toArray ??= function () {
  return [...this.toIterable()];
};"
`;

exports[`App can render goody: JavaScript Iterator.prototype.toIterable 1`] = `
"import "Function.returnThis";
import "Iterator.prototype";

iteratorPrototype.toIterable = function () {
  this[Symbol.iterator] ??= Function.returnThis;
  return this;
};"
`;

exports[`App can render goody: JavaScript Math.primes 1`] = `
"Math.primes = function* () {
  yield 2;

  const oddPrimes = [];
  for (let num = 3; ; num += 2) {
    if (oddPrimes.every((p) => num % p !== 0)) {
      yield num;
      oddPrimes.push(num);
    }
  }
};"
`;

exports[`App can render goody: JavaScript Number.isIntegerOrIntegerObject 1`] = `
"Number.isIntegerOrIntegerObject = function (num) {
  return (
    (typeof num === "number" || num instanceof Number) &&
    Number.isInteger(Number(num))
  );
};"
`;

exports[`App can render goody: JavaScript Number.prototype.chr 1`] = `
"Number.prototype.chr = function () {
  return String.fromCodePoint(Number(this));
};"
`;

exports[`App can render goody: JavaScript Number.prototype.digits 1`] = `
"import "Number.isIntegerOrIntegerObject";

Number.prototype.digits = function (radix = 10) {
  if (!(Number.isIntegerOrIntegerObject(this) && Number(this) >= 0)) {
    throw new Error("Must invoke on a non-negative integer.");
  }
  if (!(Number.isIntegerOrIntegerObject(radix) && radix >= 2)) {
    throw new Error("Radix must be an integer >= 2.");
  }

  return function* () {
    let num = Number(this);
    do {
      yield num % radix;
      num = Math.floor(num / radix);
    } while (num > 0);
  }.call(this);
};"
`;

exports[`App can render goody: JavaScript Object.getUnsafe 1`] = `
"Object.getUnsafe = function (obj, properties) {
  let res = obj;
  for (const property of properties) {
    res = res[property];
  }
  return res;
};"
`;

exports[`App can render goody: JavaScript Object.setUnsafe 1`] = `
"Object.setUnsafe = function (obj, properties, value) {
  let map = obj;
  for (let i = 0; i < properties.length - 1; ++i) {
    map = map[properties[i]] ??= {};
  }
  map[properties.at(-1)] = value;
};"
`;

exports[`App can render goody: JavaScript String.prototype.chars 1`] = `"String.prototype.chars = String.prototype[Symbol.iterator];"`;

exports[`App can render goody: JavaScript String.prototype.ord 1`] = `
"String.prototype.ord = function () {
  return this.codePointAt(0);
};"
`;

exports[`App can render goody: JavaScript compareNatural 1`] = `
"export function compareNatural(a, b) {
  if (
    (typeof a === "number" && typeof b === "number") ||
    (typeof a === "string" && typeof b === "string") ||
    (typeof a === "bigint" && typeof b === "bigint")
  ) {
    return a < b ? -1 : a > b ? 1 : 0;
  }

  if (Array.isArray(a) && Array.isArray(b)) {
    for (let i = 0; i < a.length && i < b.length; ++i) {
      const compareResult = compareNatural(a[i], b[i]);
      if (compareResult !== 0) {
        return compareResult;
      }
    }

    return a.length - b.length;
  }

  throw new Error("Comparing mismatched types!");
}"
`;

exports[`App can render goody: JavaScript traverseInorder 1`] = `
"export function* traverseInorder(root) {
  const stack = [[root, false]];
  while (stack.length > 0) {
    const [node, didTraverseLeftChild] = stack.pop();
    if (node) {
      if (didTraverseLeftChild) {
        yield node;
      } else {
        stack.push([node.right, false], [node, true], [node.left, false]);
      }
    }
  }
}"
`;

exports[`App can render goody: JavaScript traversePostorder 1`] = `
"export function* traversePostorder(root) {
  const stack = [[root, false]];
  while (stack.length > 0) {
    const [node, didTraverseChildren] = stack.pop();
    if (node) {
      if (didTraverseChildren) {
        yield node;
      } else {
        stack.push([node, true], [node.right, false], [node.left, false]);
      }
    }
  }
}"
`;

exports[`App can render goody: JavaScript traversePreorder 1`] = `
"export function* traversePreorder(root) {
  const stack = [root];
  while (stack.length > 0) {
    const node = stack.pop();
    if (node) {
      yield node;
      stack.push(node.right, node.left);
    }
  }
}"
`;

exports[`App can render goody: Kotlin gcd(Int,Int) 1`] = `
"package gcd_int_int

fun gcd(a: Int, b: Int): Int {
  var mutableA = a
  var mutableB = b

  while (mutableB != 0) {
    mutableB = (mutableA % mutableB).also { mutableA = mutableB }
  }

  return mutableA
}"
`;

exports[`App can render goody: Kotlin lcm(Int,Int) 1`] = `
"package lcm_int_int

import gcd_int_int.gcd

fun lcm(a: Int, b: Int): Int = a / gcd(a, b) * b"
`;

exports[`App can render goody: Python 3 int.digits 1`] = `
"from typing import Generator


def set_up_adventure_pack() -> None:
    def digits(self: int, radix: int = 10) -> Generator[int, None, None]:
        if self < 0:
            raise ValueError("Must invoke on a non-negative integer.")

        if self == 0:
            yield 0
            return

        num = self
        while num > 0:
            yield num % radix
            num //= radix

    import ctypes, gc

    gc.get_referents(int.__dict__)[0]["digits"] = digits
    ctypes.pythonapi.PyType_Modified(ctypes.py_object(int))


set_up_adventure_pack()
del set_up_adventure_pack"
`;

exports[`App can render goody: TypeScript Array.prototype.slidingWindows 1`] = `
"import "ArraySlice";

declare global {
  interface Array<T> {
    slidingWindows(
      this: ReadonlyArray<T>,
      windowSize: number,
    ): Generator<IndexableArraySlice<T>, void, void>;
  }

  interface ReadonlyArray<T> {
    slidingWindows(
      this: ReadonlyArray<T>,
      windowSize: number,
    ): Generator<IndexableArraySlice<T>, void, void>;
  }
}

Array.prototype.slidingWindows = function* <T>(
  this: ReadonlyArray<T>,
  windowSize: number,
): Generator<IndexableArraySlice<T>, void, void> {
  for (
    let win: IndexableArraySlice<T> | null = ArraySlice.get(
      this,
      0,
      windowSize - 1,
    );
    win != null;
    win = win.isSuffix() ? null : win.slide()
  ) {
    yield win;
  }
};"
`;

exports[`App can render goody: TypeScript Array.prototype.swap 1`] = `
"declare global {
  interface Array<T> {
    swap(this: T[], i: number, j: number): void;
  }
}

Array.prototype.swap = function <T>(this: T[], i: number, j: number): void {
  const tmp = this[i];
  this[i] = this[j];
  this[j] = tmp;
};"
`;

exports[`App can render goody: TypeScript ArraySlice 1`] = `
"type ArraySliceProxyHandler<T> = {
  get(
    target: ArraySlice<T>,
    property: PropertyKey,
    receiver: ArraySlice<T>,
  ): unknown;
};

export type IndexableArraySlice<T> = ArraySlice<T> & {
  [index: number]: T | undefined;
};

export class ArraySlice<T> {
  private constructor(
    public readonly array: ReadonlyArray<T>,
    public readonly start: number,
    public readonly end: number,
  ) {}

  get length(): number {
    return this.end - this.start + 1;
  }

  at(index: number): T | undefined {
    const adjustedIndex = index < 0 ? index + this.length : index;
    return this.array[this.start + adjustedIndex];
  }

  *[Symbol.iterator](this: ArraySlice<T>): Generator<T, void, void> {
    for (let i = this.start; i <= this.end; ++i) {
      yield this.array[i];
    }
  }

  slide(delta: number = 1): IndexableArraySlice<T> {
    return ArraySlice.get(this.array, this.start + delta, this.end + delta);
  }

  isPrefix(): boolean {
    return this.start === 0;
  }

  isSuffix(): boolean {
    return this.end === this.array.length - 1;
  }

  private declare static proxyHandler?: ArraySliceProxyHandler<unknown>;

  static get<T>(
    array: ReadonlyArray<T>,
    start: number,
    end: number,
  ): IndexableArraySlice<T> {
    ArraySlice.proxyHandler ??= {
      get(
        target: ArraySlice<unknown>,
        property: PropertyKey,
        receiver: ArraySlice<unknown>,
      ): unknown {
        if (typeof property === "string" || typeof property === "number") {
          const index = parseInt(String(property), 10);
          if (String(index) === String(property)) {
            if (index < 0 || index >= receiver.length) {
              return undefined;
            }
            return receiver.at(index);
          }
        }

        return (target as unknown as Record<PropertyKey, unknown>)[property];
      },
    };

    return new Proxy(
      new ArraySlice(array, start, end),
      ArraySlice.proxyHandler as ArraySliceProxyHandler<T>,
    ) as IndexableArraySlice<T>;
  }
}"
`;

exports[`App can render goody: TypeScript BinaryHeap 1`] = `
"import "Array.prototype.swap";

export class BinaryHeap<T> {
  private readonly items: T[] = [];

  constructor(private readonly compareFn: (a: T, b: T) => number) {}

  push(item: T): void {
    this.items.push(item);
    this.bubbleUp(this.items.length - 1);
  }

  peek(): T | undefined {
    return this.items[0];
  }

  pop(): T | undefined {
    if (this.isEmpty()) {
      return undefined;
    }

    this.items.swap(0, this.items.length - 1);
    const res = this.items.pop();
    this.bubbleDown(0);
    return res;
  }

  get size(): number {
    return this.items.length;
  }

  isEmpty(): boolean {
    return this.size === 0;
  }

  private static getParentIndex(index: number): number {
    return Math.floor((index - 1) / 2);
  }

  private static getChildIndexes(index: number): [number, number] {
    // TODO: investigate whether listing the right child first can offer a
    // performance boost in bubbleDown(), due to favoring the side of the
    // tree that may be smaller
    return [2 * index + 1, 2 * index + 2];
  }

  private bubbleUp(index: number): void {
    if (index === 0) {
      return;
    }

    const parentIndex = BinaryHeap.getParentIndex(index);
    if (this.compareFn(this.items[index], this.items[parentIndex]) < 0) {
      this.items.swap(index, parentIndex);
      this.bubbleUp(parentIndex);
    }
  }

  private bubbleDown(index: number): void {
    let bestIndex = index;
    for (const childIndex of BinaryHeap.getChildIndexes(index)) {
      if (
        childIndex < this.items.length &&
        this.compareFn(this.items[childIndex], this.items[bestIndex]) < 0
      ) {
        bestIndex = childIndex;
      }
    }

    if (bestIndex !== index) {
      this.items.swap(index, bestIndex);
      this.bubbleDown(bestIndex);
    }
  }
}"
`;

exports[`App can render goody: TypeScript Function.returnThis 1`] = `
"declare global {
  interface FunctionConstructor {
    returnThis<T>(this: T): T;
  }
}

Function.returnThis = function <T>(this: T): T {
  return this;
};"
`;

exports[`App can render goody: TypeScript Iterator.prototype 1`] = `
"export const iteratorPrototype = Object.getPrototypeOf(
  Object.getPrototypeOf([].values()),
) as Iterator<unknown, unknown, unknown>;"
`;

exports[`App can render goody: TypeScript Iterator.prototype.every 1`] = `
"import "Iterator.prototype";
import "Iterator.prototype.toIterable";

declare global {
  interface Iterator<T> {
    every(
      this: Iterator<T>,
      callbackfn: (value: T, index: number) => unknown,
    ): boolean;
  }
}

iteratorPrototype.every ??= function <T>(
  this: Iterator<T>,
  callbackfn: (element: T, index: number) => unknown,
): boolean {
  let index = 0;
  for (const element of this.toIterable()) {
    if (!callbackfn(element, index)) {
      return false;
    }
    ++index;
  }
  return true;
};"
`;

exports[`App can render goody: TypeScript Iterator.prototype.filter 1`] = `
"import "Iterator.prototype";
import "Iterator.prototype.toIterable";

declare global {
  interface Iterator<T> {
    filter(
      this: Iterator<T>,
      callbackfn: (value: T, index: number) => unknown,
    ): Generator<T, void, void>;
  }
}

iteratorPrototype.filter ??= function* <T>(
  this: Iterator<T>,
  callbackFn: (element: T, index: number) => unknown,
): Generator<T, void, void> {
  let index = 0;
  for (const element of this.toIterable()) {
    if (callbackFn(element, index)) {
      yield element;
    }
    ++index;
  }
};"
`;

exports[`App can render goody: TypeScript Iterator.prototype.find 1`] = `
"import "Iterator.prototype";
import "Iterator.prototype.toIterable";

declare global {
  interface Iterator<T> {
    find(
      this: Iterator<T>,
      callbackFn: (element: T, index: number) => boolean,
    ): T | undefined;
  }
}

iteratorPrototype.find ??= function <T>(
  this: Iterator<T>,
  callbackFn: (element: T, index: number) => boolean,
): T | undefined {
  let index = 0;
  for (const element of this.toIterable()) {
    if (callbackFn(element, index)) {
      return element;
    }
    ++index;
  }
  return undefined;
};"
`;

exports[`App can render goody: TypeScript Iterator.prototype.forEach 1`] = `
"import "Iterator.prototype";
import "Iterator.prototype.toIterable";

declare global {
  interface Iterator<T> {
    forEach(
      this: Iterator<T>,
      callbackFn: (element: T, index: number) => void,
    ): void;
  }
}

iteratorPrototype.forEach ??= function <T>(
  this: Iterator<T>,
  callbackFn: (element: T, index: number) => void,
): void {
  let index = 0;
  for (const element of this.toIterable()) {
    callbackFn(element, index);
    ++index;
  }
};"
`;

exports[`App can render goody: TypeScript Iterator.prototype.map 1`] = `
"import "Iterator.prototype";
import "Iterator.prototype.toIterable";

declare global {
  interface Iterator<T> {
    map<TOut>(
      this: Iterator<T>,
      callbackFn: (element: T, index: number) => TOut,
    ): Generator<TOut, void, void>;
  }
}

iteratorPrototype.map ??= function* <TIn, TOut>(
  this: Iterator<TIn>,
  callbackFn: (element: TIn, index: number) => TOut,
): Generator<TOut, void, void> {
  let index = 0;
  for (const element of this.toIterable()) {
    yield callbackFn(element, index);
    ++index;
  }
};"
`;

exports[`App can render goody: TypeScript Iterator.prototype.max 1`] = `
"import "compareNatural";
import "Iterator.prototype";
import "Iterator.prototype.toIterable";

declare global {
  interface Iterator<T> {
    max(
      this: Iterator<T>,
      compareFn?: (a: T, b: T) => number,
      options?: { nanBehavior?: "avoid" | "compare" },
    ): T | undefined;
  }
}

iteratorPrototype.max = function <T>(
  this: Iterator<T>,
  compareFn: (a: T, b: T) => number = compareNatural,
  { nanBehavior = "avoid" }: { nanBehavior?: "avoid" | "compare" } = {},
): T | undefined {
  let res: T | undefined = undefined;

  let isFirst = true;
  for (const element of this.toIterable()) {
    if (
      isFirst ||
      compareFn(element, res as T) > 0 ||
      (nanBehavior === "avoid" && Number.isNaN(res) && !Number.isNaN(element))
    ) {
      res = element;
      isFirst = false;
    }
  }

  return res;
};"
`;

exports[`App can render goody: TypeScript Iterator.prototype.min 1`] = `
"import "compareNatural";
import "Iterator.prototype";
import "Iterator.prototype.toIterable";

declare global {
  interface Iterator<T> {
    min(
      this: Iterator<T>,
      compareFn?: (a: T, b: T) => number,
      options?: { nanBehavior?: "avoid" | "compare" },
    ): T | undefined;
  }
}

iteratorPrototype.min = function <T>(
  this: Iterator<T>,
  compareFn: (a: T, b: T) => number = compareNatural,
  { nanBehavior = "avoid" }: { nanBehavior?: "avoid" | "compare" } = {},
): T | undefined {
  let res: T | undefined = undefined;

  let isFirst = true;
  for (const element of this.toIterable()) {
    if (
      isFirst ||
      compareFn(element, res as T) < 0 ||
      (nanBehavior === "avoid" && Number.isNaN(res) && !Number.isNaN(element))
    ) {
      res = element;
      isFirst = false;
    }
  }

  return res;
};"
`;

exports[`App can render goody: TypeScript Iterator.prototype.some 1`] = `
"import "Iterator.prototype";
import "Iterator.prototype.toIterable";

declare global {
  interface Iterator<T> {
    some(
      this: Iterator<T>,
      callbackfn: (value: T, index: number) => unknown,
    ): boolean;
  }
}

iteratorPrototype.some ??= function <T>(
  this: Iterator<T>,
  callbackfn: (element: T, index: number) => unknown,
): boolean {
  let index = 0;
  for (const element of this.toIterable()) {
    if (callbackfn(element, index)) {
      return true;
    }
    ++index;
  }
  return false;
};"
`;

exports[`App can render goody: TypeScript Iterator.prototype.toArray 1`] = `
"import "Iterator.prototype";
import "Iterator.prototype.toIterable";

declare global {
  interface Iterator<T> {
    toArray(this: Iterator<T>): T[];
  }
}

iteratorPrototype.toArray ??= function <T>(this: Iterator<T>): T[] {
  return [...this.toIterable()];
};"
`;

exports[`App can render goody: TypeScript Iterator.prototype.toIterable 1`] = `
"import "Function.returnThis";
import "Iterator.prototype";

declare global {
  interface Iterator<T> {
    toIterable(this: Iterator<T>): IterableIterator<T>;
  }
}

iteratorPrototype.toIterable = function <T>(
  this: Iterator<T>,
): IterableIterator<T> {
  (this as unknown as Record<symbol, unknown>)[Symbol.iterator] ??=
    Function.returnThis;
  return this as unknown as IterableIterator<T>;
};"
`;

exports[`App can render goody: TypeScript Math.primes 1`] = `
"declare global {
  interface Math {
    primes(): Generator<number, void, void>;
  }
}

Math.primes = function* (): Generator<number, void, void> {
  yield 2;

  const oddPrimes: number[] = [];
  for (let num = 3; ; num += 2) {
    if (oddPrimes.every((p) => num % p !== 0)) {
      yield num;
      oddPrimes.push(num);
    }
  }
};"
`;

exports[`App can render goody: TypeScript Number.isIntegerOrIntegerObject 1`] = `
"declare global {
  interface NumberConstructor {
    isIntegerOrIntegerObject(num: unknown): boolean;
  }
}

Number.isIntegerOrIntegerObject = function (num: unknown): boolean {
  return (
    (typeof num === "number" || num instanceof Number) &&
    Number.isInteger(Number(num))
  );
};"
`;

exports[`App can render goody: TypeScript Number.prototype.chr 1`] = `
"declare global {
  interface Number {
    chr(this: Number): string;
  }
}

Number.prototype.chr = function (this: Number): string {
  return String.fromCodePoint(Number(this));
};"
`;

exports[`App can render goody: TypeScript Number.prototype.digits 1`] = `
"import "Number.isIntegerOrIntegerObject";

declare global {
  interface Number {
    digits(this: Number): Generator<number, void, void>;
    digits(this: Number, radix: number): Generator<number, void, void>;
  }
}

Number.prototype.digits = function (
  this: Number,
  radix: number = 10,
): Generator<number, void, void> {
  if (!(Number.isIntegerOrIntegerObject(this) && Number(this) >= 0)) {
    throw new Error("Must invoke on a non-negative integer.");
  }
  if (!(Number.isIntegerOrIntegerObject(radix) && radix >= 2)) {
    throw new Error("Radix must be an integer >= 2.");
  }

  return function* (this: Number) {
    let num = Number(this);
    do {
      yield num % radix;
      num = Math.floor(num / radix);
    } while (num > 0);
  }.call(this);
};"
`;

exports[`App can render goody: TypeScript Object.getUnsafe 1`] = `
"declare global {
  interface ObjectConstructor {
    getUnsafe(
      obj: unknown,
      properties: readonly [string, ...string[]],
    ): unknown;
  }
}

Object.getUnsafe = function (
  obj: unknown,
  properties: readonly [string, ...string[]],
): unknown {
  let res = obj;
  for (const property of properties) {
    res = (res as Record<string, unknown>)[property];
  }
  return res;
};"
`;

exports[`App can render goody: TypeScript Object.setUnsafe 1`] = `
"declare global {
  interface ObjectConstructor {
    setUnsafe(
      obj: unknown,
      properties: readonly [string, ...string[]],
      value: unknown,
    ): void;
  }
}

Object.setUnsafe = function (
  obj: unknown,
  properties: readonly [string, ...string[]],
  value: unknown,
): void {
  let map = obj;
  for (let i = 0; i < properties.length - 1; ++i) {
    map = (map as Record<string, unknown>)[properties[i]] ??= {};
  }
  (map as Record<string, unknown>)[properties.at(-1)!] = value;
};"
`;

exports[`App can render goody: TypeScript String.prototype.chars 1`] = `
"declare global {
  interface String {
    chars(this: String): IterableIterator<string>;
  }
}

String.prototype.chars = String.prototype[Symbol.iterator];"
`;

exports[`App can render goody: TypeScript String.prototype.ord 1`] = `
"declare global {
  interface String {
    ord(this: String): number | undefined;
  }
}

String.prototype.ord = function (this: String): number | undefined {
  return this.codePointAt(0);
};"
`;

exports[`App can render goody: TypeScript compareNatural 1`] = `
"export function compareNatural<T>(a: T, b: T): number {
  if (
    (typeof a === "number" && typeof b === "number") ||
    (typeof a === "string" && typeof b === "string") ||
    (typeof a === "bigint" && typeof b === "bigint")
  ) {
    return a < b ? -1 : a > b ? 1 : 0;
  }

  if (Array.isArray(a) && Array.isArray(b)) {
    for (let i = 0; i < a.length && i < b.length; ++i) {
      const compareResult = compareNatural(a[i], b[i]);
      if (compareResult !== 0) {
        return compareResult;
      }
    }

    return a.length - b.length;
  }

  throw new Error("Comparing mismatched types!");
}"
`;

exports[`App can render goody: TypeScript traverseInorder 1`] = `
"export function* traverseInorder<
  T extends { left?: T | null | undefined; right?: T | null | undefined },
>(root: T | null | undefined): Generator<T, void, void> {
  const stack: [T | null | undefined, boolean][] = [[root, false]];
  while (stack.length > 0) {
    const [node, didTraverseLeftChild] = stack.pop()!;
    if (node) {
      if (didTraverseLeftChild) {
        yield node;
      } else {
        stack.push([node.right, false], [node, true], [node.left, false]);
      }
    }
  }
}"
`;

exports[`App can render goody: TypeScript traversePostorder 1`] = `
"export function* traversePostorder<
  T extends { left?: T | null | undefined; right?: T | null | undefined },
>(root: T | null | undefined): Generator<T, void, void> {
  const stack: [T | null | undefined, boolean][] = [[root, false]];
  while (stack.length > 0) {
    const [node, didTraverseChildren] = stack.pop()!;
    if (node) {
      if (didTraverseChildren) {
        yield node;
      } else {
        stack.push([node, true], [node.right, false], [node.left, false]);
      }
    }
  }
}"
`;

exports[`App can render goody: TypeScript traversePreorder 1`] = `
"export function* traversePreorder<
  T extends { left?: T | null | undefined; right?: T | null | undefined },
>(root: T | null | undefined): Generator<T, void, void> {
  const stack = [root];
  while (stack.length > 0) {
    const node = stack.pop();
    if (node) {
      yield node;
      stack.push(node.right, node.left);
    }
  }
}"
`;
